src/test/fail/else_without_if.ly
###
SyntaxError: 'else' without 'if'.
Where: File "test/fail/else_without_if.ly" at line 6
###

else
